# Competitive-Programming

./: .gitignore  CMakeLists.txt  README.md  TODO.md  extensions.txt  problem_categories.md  problems.todo  pyvenv.cfg
.templates/: .gitignore
Advent of Code/: AOC11.cpp  AOC13.cpp  AOC14.py  AOC2020.py  AOC3.cpp  AOC6.cpp  AOC6.py  AOC7.py
Another Contest/: Graphs.cpp
Appleby Contest/: Rectangles.java
Art Academy/: Prologue.java
BlueBook/: Digits.py  LowerCase.cpp  Max.py  Prime.java
BulgarianOI/: Boxen.java
CCC/: ArrangingBooks.cpp  Art.cpp  AttackOfTheCipherTexts.java  BabblingBrooks.cpp  BabblingBrooks.py  Bananas.py  BigBangSecrets.java  Blindfold.cpp  BoilingWater.cpp  Boxes.java  ChancesOfWinning.java  ChooseYourOwnPath.java  ColdCompress.java  CombiningRiceballs.cpp  EnglishOrFrench.cpp  EscapeRoom.java  EscapeRoomHard.cpp  ExactlyElectrical.py  Fix.cpp  FractionAction.cpp  Friends.java  Gates.cpp  Golf.cpp  Golf.py  ItsToughBeingATeen.java  J2 - 9966.cpp  LongDivision.cpp  Maternity.cpp  PenniesInARing.cpp  PenniesInARingOpt.cpp  PrettyAveragePrimes.py  RoboThieves.cpp  SearchingForStrings.py  Sentences.py  SlotMachines.java  Spreadsheet.cpp  Spreadsheet.py  SurmisingASprintersSpeed.py  TinCanTelephone.cpp  TruckingTroubles.cpp  (+7 more)
CCCHK/: QueensCantAttackMe.java
CCO/: AllRoadsLeadWhere.java  CommonWords.py  GradientDescent.cpp  LHC.cpp  PrimedSequences.cpp  TheHungaryGames.cpp  Troyangles.cpp
COCI/: Cetiri.java  Diferencija.cpp  Herman.java  Ivana.cpp  Note.py  Utrka.java  Utrka.py  Veci.java  Zapis.cpp
CSES/: FindingACentroid.cpp
py3/: test.py  (+2 more)
(+1632 files in other folders)
